--- a/noty/templates/registration/login.html
+++ b/noty/templates/registration/login.html
@@ -1,11 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>THIS IS THE LOGIN</h1>
-</body>
-</html>
+{% extends "global/base.html" %}
+
+{% block head %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+{% endblock head %}
+
+{% block main %}
+    {% load crispy_forms_tags %}
+
+    <form action="" method="POST" class="d-flex align-items-center justify-content-center vh-100">
+        {% csrf_token %}
+        <div class="card" style="width: 25rem; margin-bottom: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">User Credentials</h5>
+              {{form |crispy}}
+
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary" type="submit">Log In</button>
+                </div>
+                <hr>
+                <div class="d-grid gap-2">
+                    <a href="#" class="btn btn-success">Register</a>
+                    <a href="{% url 'home' %}" class="btn btn-danger">Back</a>
+                </div>
+            </div>
+        </div>
+    </form>
+{% endblock main %}
