--- a/noty/templates/notes/create.html
+++ b/noty/templates/notes/create.html
@@ -1,9 +1,25 @@
 {% extends "global/base-nav.html" %}
 
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href=" {% static 'css/create-note.css' %}">
+{% endblock head %}
+
 {% block main %}
-    <form action="" method='POST'>
-        {% csrf_token %}
-        {{form}}
-        <button type='submit'>Save</button>
-    </form>
+
+    <div class="card mx-auto" style="width: 30rem; margin-top: 50px">
+        <div class="card-body">
+            <h5 class="card-title">New Note</h5>
+            <form action="" method='POST'>
+                {% csrf_token %}
+                {{form}}
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
+                    <button class="btn btn-primary" type='submit'>Post</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
 {% endblock main %}
