--- a/noty/templates/global/base-nav.html
+++ b/noty/templates/global/base-nav.html
@@ -27,9 +27,9 @@
         <li {% if following_active %}class="active"{% endif %}><a href='{% url "following" %}'>Following</a></li>
         {% if request.user.is_authenticated %}
           <li>
-            <a class='dropdown-arrow' href='http://'>{{user.username}}</a>
+            <a class='dropdown-arrow' href='{% url "profile" user=user.username %}'>{{user.username}}</a>
             <ul class='sub-menus'>
-              <li><a href='http://'>Profile</a></li>
+              <li><a href='{% url "profile" user=user.username %}'>Profile</a></li>
               <li><a href='http://'>Configuration</a></li>
               <li><a href='{% url "exit" %}'>Logout</a></li>
             </ul>
