--- a/noty/templates/global/parts/note-dashboard.html
+++ b/noty/templates/global/parts/note-dashboard.html
@@ -4,9 +4,7 @@
     {% for item in notes %}
     <div class="card" style="width: 18rem; background-color: var(--color{{item.note.color}})" id="note-{{item.note.id}}">
         <div class="card-body">
-            <a href="{% url 'profile' user=item.note.user.username %}">
-                <h5 class="card-title">{{item.note.user.username}}</h5>
-            </a>
+            <h5 class="card-title"><a href="{% url 'profile' user=item.note.user.username %}">{{item.note.user.username}}</a></h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">{{item.note.date}}</h6>
             <p class="card-text">{{item.note.content}}</p>
             {% if item.note.private %}
