--- a/noty/templates/global/parts/profile-header.html
+++ b/noty/templates/global/parts/profile-header.html
@@ -16,7 +16,12 @@
         <button type='submit'>UnFollow</button>
     </form>
 {% endif %}
+
 <hr>
-<a href="{% url 'profile' user=user_visiting.username %}">Notes</a>
-<a href="{% url 'profile-stars' user=user_visiting.username %}">Stars</a>
+
+<div id='notes-stars'>
+    <a href="{% url 'profile' user=user_visiting.username %}">Notes</a>
+    <a href="{% url 'profile-stars' user=user_visiting.username %}">Stars</a>
+</div>
+
 <hr>
