styles notes & remove print's

--- a/noty/static/css/notes-flex.css
+++ b/noty/static/css/notes-flex.css
@@ -3,3 +3,9 @@
     flex-wrap: wrap;
     gap: 20px;
 }
+
+.user-anchor-name{
+    text-decoration: none;
+    color:black;
+    font-weight: 600;
+}
