--- a/noty/templates/feed/main.html
+++ b/noty/templates/feed/main.html
@@ -9,6 +9,7 @@
     {% if profile %}
         <link rel="stylesheet" href="{% static 'css/profile-header.css' %}">
     {% endif %}
+    <script src="https://kit.fontawesome.com/cf457e58c8.js" crossorigin="anonymous"></script>
 {% endblock head %}
 
 {% block main %}
