more colors and redirect

--- a/noty/static/css/note-colors.css
+++ b/noty/static/css/note-colors.css
@@ -1,4 +1,8 @@
 :root{
     --color1: #FDFD96;
-    --color2: #BDECB6
+    --color2: #BDECB6;
+    --color3: #FF6961;
+    --color4: #F7BD56;
+    --color5: #ABC4FF;
+    --color6: #ECC9DD;
 }
