--- a/noty/templates/global/parts/note-dashboard.html
+++ b/noty/templates/global/parts/note-dashboard.html
@@ -5,8 +5,10 @@
         {% for item in notes %}
         <div class="card" style="width: 18rem; background-color: var(--color{{item.note.color}})" id="note-{{item.note.id}}">
             <div class="card-body">
-                <h5 class="card-title"><a class="user-anchor-name" href="{% url 'profile' user=item.note.user.username %}">{{item.note.user.username}}</a></h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">{{item.note.date}}</h6>
+                <div class='user-time-container'>
+                    <h5 class="card-title"><a class="user-anchor-name" href="{% url 'profile' user=item.note.user.username %}">{{item.note.user.username}}</a></h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">{{item.note.date | timesince}}</h6>
+                </div>
                 <p class="card-text">{{item.note.content}}</p>
                 {% if item.note.private %}
                     <p>PRIVATE</p>
