--- a/noty/static/css/notes-flex.css
+++ b/noty/static/css/notes-flex.css
@@ -1,7 +1,17 @@
 .cards-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 15px;
+    justify-content: center;
+}
+
+.card{
+    flex: 1 1 18rem;
+    min-width: 0;
+}
+
+.card-text{
+    margin-bottom: 10px;
 }
 
 .user-anchor-name{
@@ -46,4 +56,5 @@
 
 .user-time-container h5{
     margin-right: 8px !IMPORTANT;
+    font-size: 22px;
 }
