--- a/noty/templates/notes/create.html
+++ b/noty/templates/notes/create.html
@@ -14,8 +14,8 @@
             <form action="" method='POST'>
                 {% csrf_token %}
                 {{form}}
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end buttons-container">
+                    <a href="{% url 'home' %}" class="btn btn-secondary" >Cancel</a>
                     <button class="btn btn-primary" type='submit'>Post</button>
                 </div>
             </form>
@@ -23,3 +23,7 @@
     </div>
 
 {% endblock main %}
+
+{% block scripts %}
+    <script src="{% static 'js/create-note-colors.js' %}"></script>
+{% endblock scripts %}
