--- a/noty/templates/global/parts/note-dashboard.html
+++ b/noty/templates/global/parts/note-dashboard.html
@@ -11,7 +11,7 @@
                 </div>
                 <p class="card-text">{{item.note.content}}</p>
                 {% if item.note.private %}
-                    <p>PRIVATE</p>
+                    <i class="fa-solid fa-lock star-button" style="color: #000000;"></i>
                 {% else %}
                     {% if user.is_authenticated %}
                         {% if not item.star %}
