--- a/noty/templates/notes/create.html
+++ b/noty/templates/notes/create.html
@@ -8,7 +8,7 @@
 
 {% block main %}
 
-    <div class="card mx-auto" style="width: 30rem; margin-top: 50px">
+    <div class="card mx-auto" style="max-width: 30rem; margin-top: 25px">
         <div class="card-body">
             <h5 class="card-title">New Note</h5>
             <form action="" method='POST'>
