--- a/noty/templates/registration/login.html
+++ b/noty/templates/registration/login.html
@@ -3,13 +3,12 @@
 {% block main %}
     {% load crispy_forms_tags %}
 
-    <form action="" method="POST" class="d-flex align-items-center justify-content-center vh-100">
+    <form action="" method="POST" class="d-flex justify-content-center">
         {% csrf_token %}
-        <div class="card" style="width: 25rem; margin-bottom: 18rem">
+        <div class="card" style="max-width: 30rem;  margin-top: 25px">
             <div class="card-body">
-              <h5 class="card-title">User Credentials</h5>
+                <h5 class="card-title">User Credentials</h5>
               {{form |crispy}}
-
                 <div class="d-grid gap-2">
                     <button class="btn btn-primary" type="submit">LogIn</button>
                 </div>
