--- a/noty/templates/registration/register.html
+++ b/noty/templates/registration/register.html
@@ -3,9 +3,9 @@
 {% block main %}
     {% load crispy_forms_tags %}
 
-    <form action="" method="POST" class="d-flex align-items-center justify-content-center vh-100">
+    <form action="" method="POST" class="d-flex justify-content-center">
         {% csrf_token %}
-        <div class="card" style="width: 25rem;">
+        <div class="card" style="max-width: 30rem; margin-top: 25px">
             <div class="card-body">
               <h5 class="card-title">Create User</h5>
               {{form |crispy}}
